--- a/presentation.tex
+++ b/presentation.tex
@@ -1,7 +1,7 @@
 \documentclass{beamer}
 \usetheme{Madrid}
 
-\title{Certified Algorithms for Combinatorial Optimization Problems}
+\title{Feedback Vertex Set with Bounded Cycle Length: Approximation, Tractability and Beyond the Worst-Case Analysis}
 \author{Martin Sokolov}
 \institute{Utrecht University}
 \date{\today}
@@ -39,181 +39,86 @@
 
 \section{Problem Overview}
 
-\begin{frame}{Feedback Vertex Set (FVS)}
-  \begin{itemize}
-    \item 
-  \end{itemize}
+\begin{frame}{Problems Studied (Emphasis on Focus Areas)}
+
+\begin{itemize}
+    \item Dominating Set
+    \item \textcolor{red!50}{Feedback Vertex Set (FVS)}
+    \item \textcolor{red}{Feedback Vertex Set with Four Cycle Length (FVS-4CL)}
+    \item \textcolor{red}{Feedback Vertex Set with Bounded Cycle Length (FVS-BCL)}
+    \item $r$-Dominating Set ($r$-DS)
+\end{itemize}
+
+\vspace{1em}
+\small
+\textcolor{red}{\textbf{FVS-4CL}} is the primary focus of this work.\\
+We aim to generalize results to \textcolor{red}{\textbf{FVS-BCL}}.\\
+(Our hope in the beginning was generalizing our results to \textcolor{red!50}{\textbf{FVS}}).
+\end{frame}
+
+\begin{frame}{Approximation Algorithms for Feedback Vertex Set (FVS)}
+
+\begin{itemize}
+    \item \textbf{$\min\{2\Delta^2,\ 4 \log n\}$ where $\Delta$ is the max. degree in $G$. (Bar-Yehuda et al., 1994)}\\
+    \small Primal-dual algorithm on undirected graphs with general vertex weights.
+
+    \item \textbf{2-Approximation (Bafna et al., 1995)}\\
+    \small Local ratio technique with improved efficiency.
+    
+    \item \textbf{2-Approximation (Becker and Geiger, 1996)}\\
+    \small Greedy-like approximation algorithm.
+
+    \item \textbf{2-Approximation (Chudak et al., 1998)}\\
+    \small A primal-dual algorithm.
+    
+\end{itemize}
+
+\begin{itemize}
+  \item \textbf{Hardness: APX-Complete (Dinur and Safra, 2005)}\\
+    \small NP-hard to approximate within a factor better than 1.36 via reduction from Vertex Cover.
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Approximation Algorithms for Feedback Vertex Set (FVS) in planar graphs}
+
+\begin{itemize}
+    \item \textbf{PTAS for FVS (Kleinberg and Kumar, 2001)}
+    \item \textbf{PTAS for FVS (Le and Zheng, 2020)}\\
+    \small Using a local search heuristic
+    \item \textbf{EPTAS for unweighted FVS (Demaine and Hajiaghayi)}\\
+    \small Using bidimensionality
+    \item \textbf{PTAS for weighted FVS (Cohen-Addad et al., 2016)}\\
+    \small Reduction from weighted feedback vertex set
+ to vertex-weighted connected dominating set
+    \item \textbf{EPTAS for weighted FVS (\textcolor{red}{Open question.})}
+\end{itemize}
+
 \end{frame}
 
 \begin{frame}{FVS with Bounded Cycle Length (FVS-BCL)}
   \begin{itemize}
-    \item 
+    \item \textbf{Inapproximability of Feedback Vertex Set for Bounded Length Cycles 
+    (Guruswami and Lee, 2014)}\\
+    \small For any integer constant $\rho \geq 3$ and $\epsilon > 0$, it is
+    hard to find a $(\rho-1-\epsilon)$-approximate solution to the problem of intersecting every cycle
+    of length at most $\rho$. 
   \end{itemize}
 \end{frame}
 
 \section{Approximation Schemes}
 
 \begin{frame}{EPTAS via Baker's Technique}
+  We obtain:
   \begin{itemize}
-    \item
+    \item $(1 + 2\epsilon)$-approximation algorithm for the FVS-4CL problem
+    
+    with a running time of $2^{\mathcal{O}(\tw^2)} \cdot n^{\mathcal{O}(1)}$.
+    \item \(\left(1 + \frac{\lfloor\rho/2\rfloor}{\epsilon}\right)\)-approximation for the FVS-BCL problem 
+    
+    with a running time of \( f\left(\tw, \rho\right) \cdot n^{\mathcal{O}\left(1\right)} \) 
+    for some computable function $f$.
   \end{itemize}
-\end{frame}
-
-\begin{frame}{BFS Layered Tree Structure}
-    \begin{columns}
-
-        \begin{column}{0.40\textwidth}
-            \textbf{Idea:} Break graph into layers via BFS. \\
-            \vspace{1em}
-            \begin{itemize}
-                \item Nodes grouped by distance from root.
-                \item Overlap grouped by distance from root $\mod \ell$ 
-                \item Subgraphs $G_{0,0}, G_{0,1}, G_{0,2}, \dots$ 
-            \end{itemize}
-        \end{column}
-
-        \begin{column}{0.60\textwidth}
-            \centering
-            \resizebox{\textwidth}{!}{%
-                \begin{tikzpicture}[yscale=0.95]
-                    % Level 0 (Root node)
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (1) at (0, 0) {1};
-
-                    % Level 1
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (2) at (-2, -1.5) {2};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (3) at (2, -1.5) {3};
-
-                    % Level 2
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (4) at (0, -3) {4};
-
-                    % Dotted vertical line indicating further levels
-                    \node[draw=none] at (0, -3.9) { \huge $\vdots$ };
-
-                    % Level l-3
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (5) at (-3, -5){5};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (6) at (0, -5) {6};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (7) at (3, -5) {7};
-
-                    % Level l-2
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (8) at (-4.5, -6.5){8};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (9) at (-2.5, -6.5) {9};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (10) at (-1, -6.5) {10};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (11) at (1, -6.5) {11};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (12) at (2.5, -6.5) {12};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (13) at (4.5, -6.5) {13};
-                    
-                    % Level l-1
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (14) at (0, -8){14};
-
-                    \node[draw=none] at (2, -8) {\huge $\cdots$};
-                    \node[draw=none] at (-2, -8) {\huge $\cdots$};
-
-                    % Vertical line between levels l-1 and l
-                    \draw[thick, blue] (-8, -8.75) -- (8, -8.75);
-                    \draw[thick, blue] (-8, -8.75) -- (-8, -19.75);
-                    \draw[thick, blue] (8, -8.75) -- (8, -19.75);
-                    \draw[thick, blue] (-8, -19.75) -- (8, -19.75);
-                    \node[draw=none] at (9, -15) {\huge $G_{0, 1}$};
-
-                    % Level l
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (15) at (-2, -9.5){15};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (16) at (2, -9.5){16};
-
-                    \node[draw=none] at (4, -9.5) {\huge $\cdots$};
-                    \node[draw=none] at (-4, -9.5) {\huge $\cdots$};
-
-                    % Level l+1
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (17) at (0, -11){17};
-                    
-                    % Vertical line between levels l+1 and l+2
-                    \draw[thick, red] (-7, -11.75) -- (7, -11.75);
-                    \draw[thick, red] (-7, -11.75) -- (-7, 0);
-                    \draw[thick, red] (7, -11.75) -- (7, 0);
-                    \node[draw=none] at (8, -5.5) {\huge $G_{0, 0}$};
-
-                    % Horizontal dots on level l+1
-                    \node[draw=none] at (2, -11) {\huge $\cdots$};
-                    \node[draw=none] at (-2, -11) {\huge $\cdots$};
-
-                    % Level l+2
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (18) at (-4.5, -12.5){18};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (19) at (-2.5, -12.5) {19};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (20) at (-1, -12.5) {20};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (21) at (1, -12.5) {21};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (22) at (2.5, -12.5) {22};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (23) at (4.5, -12.5) {23};
-                    
-                    % Level l+3
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (24) at (-3, -14){24};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (25) at (0, -14) {25};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (26) at (3, -14) {26};
-
-                    % Dotted vertical line indicating further levels
-                    \node[draw=none] at (0, -14.9) { \huge $\vdots$ };
-
-                    % Level 2l - 1
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (27) at (0, -16) {27};
-
-                    \node[draw=none] at (2, -16) {\huge $\cdots$};
-                    \node[draw=none] at (-2, -16) {\huge $\cdots$};
-
-                    % Vertical line between levels l+1 and l+2
-                    \draw[thick, green] (-9, -16.75) -- (9, -16.75);
-                    \draw[thick, green] (-9, -16.75) -- (-9, -22);
-                    \draw[thick, green] (9, -16.75) -- (9, -22);
-
-                    % Level 2l
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (28) at (-2, -17.5) {28};
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (29) at (2, -17.5) {29};
-                    
-                    \node[draw=none] at (4, -17.5) {\huge $\cdots$};
-                    \node[draw=none] at (-4, -17.5) {\huge $\cdots$};
-
-                    % Level 2l+1
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (30) at (0, -19) {30};
-
-                    \node[draw=none] at (2, -19) {\huge $\cdots$};
-                    \node[draw=none] at (-2, -19) {\huge $\cdots$};
-
-                    % Level 2l+2
-                    \node[circle, draw, fill=blue!20, minimum size=10mm] (31) at (0, -20.5) {31};
-
-                    \node[draw=none] at (2, -20.5) {\huge $\cdots$};
-                    \node[draw=none] at (-2, -20.5) {\huge $\cdots$};
-
-                    % Dotted vertical line indicating further levels
-                    \node[draw=none] at (0, -21.4) { \huge $\vdots$ };
-
-                    \node[draw=none] at (10, -20) {\huge $G_{0, 2}$};
-
-
-                    % Draw edges for BFS with renumbered vertices
-                    \foreach \I/\j in {1/2, 1/3, 2/4, 3/4, 5/8, 5/9, 8/14, 9/14, 6/10, 6/11, 10/14, 11/14,
-                    7/12, 7/13, 12/14, 13/14, 14/15, 14/16, 15/17, 16/17, 17/18, 17/19, 17/20, 17/21, 17/22, 17/23,
-                    18/24, 19/24, 20/25, 21/25, 22/26, 23/26, 27/28, 27/29, 28/30, 29/30, 30/31}
-                        \draw[thick] (\I) -- (\j);
-
-                    \node[draw=none] at (6, 0) {\huge 0};
-                    \node[draw=none] at (6, -1.5) {\huge 1};
-                    \node[draw=none] at (6, -3) {\huge 2};
-
-                    \node[draw=none] at (6, -5) {\huge $\ell-3$};
-                    \node[draw=none] at (6, -6.5) {\huge $\ell-2$};
-                    \node[draw=none] at (6, -8) {\huge $\ell-1$};
-                    \node[draw=none] at (6, -9.5) {\huge $\ell$};
-                    \node[draw=none] at (6, -11) {\huge $\ell+1$};
-                    \node[draw=none] at (6, -12.5) {\huge $\ell+2$};
-                    \node[draw=none] at (6, -14) {\huge $\ell+3$};
-
-                    \node[draw=none] at (6, -16) {\huge $2\ell-1$};
-                    \node[draw=none] at (6, -17.5) {\huge $2\ell$};
-                    \node[draw=none] at (6, -19) {\huge $2\ell+1$};
-
-                    \node[draw=none] at (6, -20.5) {\huge $2\ell+2$};
-                \end{tikzpicture}
-            }
-        \end{column}
-    \end{columns}
 \end{frame}
 
 \begin{frame}[fragile]{Baker's Technique for Unweighted FVS-4CL}
@@ -476,14 +381,110 @@ w(S_{i^*}) \leq \sum\limits_j w(S_{i^*, j}) \leq \sum\limits_j w(F_{i^*, j}) \le
 
 \end{frame}
 
-
 \section{Fixed-Parameter Tractability of FVS-BCL}
 
-\begin{frame}{FPT via Dynamic Programming on Tree Decompositions}
+\begin{frame}
+  \centering
+  \vfill
+  \LARGE \textbf{Fixed-Parameter Tractability of FVS-BCL}
+  \vfill
+\end{frame}
+
+
+\begin{frame}{Fixed-Parameter Tractability of FVS-BCL}
   \begin{itemize}
-    \item 
+    \item Monadic Second Order Logic for FVS-BCL
+    \item Dynamic Programming Algorithm for FVS-BCL using Nice Tree Decompositions
   \end{itemize}
 \end{frame}
+
+\begin{frame}{MSOL Formulation}
+  \begin{itemize}
+    \item An extension of First-Order Logic
+    \item Object variables: \textit{vertices}: $v_1, v_2, \dots$ and \textit{edges}: $e_1, e_2, \dots$. 
+    \item Set variables: sets of vertices $V_1, V_2, \dots$ and sets of edges $E_1, E_2, \dots$.
+    \item Binary relation $\in : \{\text{object variable}\} \times \{\text{set variable}\} \to \{0, 1\}$. Therefore 
+    $v \in V$ \textit{iff} $v$ is an element of the corresponding set $V$.
+    \item The $Adj(e, v_i, v_j)$ relation. It detects whether edge $e$ is an edge from vertex $v_i$ to 
+    vertex $v_j$ where $v_i \neq v_j$.
+    \item Quantification over set variables: $\forall V_i, \forall E_i$ and $\exists V_i, \exists E_i$.
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{MSOL Formulation: Unweighted FVS-4CL}
+
+\begin{equation}
+    \label{courcelle:unweighted}
+    \begin{aligned}
+        \min_{F \subseteq V} & \ |F|: \\
+        & \forall v : \forall u : \forall w : \forall z : \\
+        & v \in (V \backslash F) \land u \in (V \backslash F) \land w \in (V \backslash F) \land z \in (V \backslash F) \\
+        & \land v \neq w \land u \neq z \\
+        & \land \neg ((v, u) \in E \land (u, w) \in E \land (w, z) \in E \land (v, z) \in E)
+    \end{aligned}
+\end{equation}
+
+\end{frame}
+
+\begin{frame}{MSOL Formulation: Weighted FVS-4CL}
+
+\begin{equation}
+    \label{courcelle:weighted}
+    \begin{aligned}
+        \min_{F \subseteq V} & \ w(F): \\
+        & \forall v : \forall u : \forall w : \forall z : \\
+        & v \in (V \backslash F) \land u \in (V \backslash F) \land w \in (V \backslash F) \land z \in (V \backslash F) \\
+        & \land v \neq w \land u \neq z \\
+        & \land \neg((v, u) \in E \land (u, w) \in E \land (w, z) \in E \land (v, z) \in E)
+    \end{aligned}
+\end{equation}
+
+\end{frame}
+
+\begin{frame}{MSOL Formulation: Weighted FVS-$\rho$CL}
+
+\begin{equation}
+    \label{courcelle:rho}
+    \begin{aligned}
+        \min_{F \subseteq V} & \ w(F) : \\
+        & \forall v_1 : \forall v_2 : \dots \forall v_{\rho} : \\
+        & v_1 \in (V \backslash F) \land v_2 \in (V \backslash F) \dots \land v_{\rho} \in (V \backslash F) \\
+        & \land (v_1 \neq v_2 \land v_1 \neq v_3 \land \dots \land v_1 \neq v_{\rho}) \\
+        & \land (v_2 \neq v_1 \land v_2 \neq v_3 \land \dots \land v_2 \neq v_{\rho}) \\
+        & \dots \\
+        & \land (v_{\rho} \neq v_1 \land v_{\rho} \neq v_2 \land \dots \land v_{\rho} \neq v_{\rho-1}) \\
+        & \land \neg((v_1, v_2) \in E \land (v_2, v_3) \in E \land \dots \land (v_{\rho-1},v_{\rho}) \in E \land (v_{\rho}, v_1) \in E)
+    \end{aligned}
+\end{equation}
+
+\end{frame}
+
+\begin{frame}{Courcelle's Theorem and MSOL Solvability of FVS-$\rho$CL}
+\footnotesize
+
+\begin{theorem}[Courcelle's theorem]
+\label{theorem:courcelle}
+Assume that $\phi$ is a MSOL formula and $G$ is an $n$-vertex graph, with an evaluation 
+of all free variables of $\phi$. Suppose a tree decomposition of $G$ of width $t$ is given. 
+Then there exists an algorithm that verifies whether $\phi$ is satisfied in $G$ in time:
+\[
+    f(\|\phi\|, t) \cdot n^{\mathcal{O}(1)}
+\]
+for some computable function $f$.
+\end{theorem}
+
+\begin{corollary}[MSOL Solvability of FVS-$\rho$CL on Bounded-Treewidth Graphs]
+\label{cor:msol-fvs-rho}
+Let $\rho \ge 3$ be a constant and $G = (V,E)$ be a graph of treewidth at most $\tw$, with vertex-weight function $w : V \to \mathbb{N}$.
+Then the minimum-weight set breaking all $\rho$-cycles (FVS-$\rho$CL) can be computed in time:
+\[
+    f(\rho, \tw) \cdot n^{\mathcal{O}(1)}
+\]
+for some computable function $f$ depending only on $\rho$ and $\tw$.
+\end{corollary}
+
+\end{frame}
+
 
 \begin{frame}{Algorithm Design for FVS-4CL}
 \footnotesize
@@ -832,11 +833,7 @@ w(S_{i^*}) \leq \sum\limits_j w(S_{i^*, j}) \leq \sum\limits_j w(F_{i^*, j}) \le
 \end{frame}
 
 
-\begin{frame}{MSOL Formulation}
-  \begin{itemize}
-    \item 
-  \end{itemize}
-\end{frame}
+
 
 \section{Certified Algorithms}
 
@@ -1621,6 +1618,31 @@ Then, for each $\epsilon > 0$, there exists a $(1 + \epsilon)$-certified algorit
 running in time $f(\lambda \cdot m / \epsilon) \cdot |V(G)|^{\mathcal{O}(1)}$ on any input 
 $(G, w : V(G) \to \mathbb{N})$, with $G \in \mathcal{G}$ and polynomially-bounded weights.
 \end{definition}
+\end{frame}
+
+\begin{frame}[fragile]{{$(1+\epsilon)$}-Certified Algorithm for FVS-4CL}
+  \begin{algorithm}[H]
+    \caption{$(1+\epsilon)$-Certified algorithm for FVS-4CL}
+    \begin{algorithmic}[1]
+    \REQUIRE Vertex-weighted planar graph $(G, w:V(G) \to \mathbb{N})$, $\epsilon > 0$
+    \ENSURE A vertex set $S^* \subseteq V(G)$ and a $(1+\epsilon)$-perturbation $w'$ of $w$ such that $S^*$ is optimal for FVS-4CL on $(G, w')$
+    \STATE $\kappa \leftarrow \left\lceil \frac{2m}{\epsilon} \right\rceil + 2m$, where $m \leftarrow 2$
+    \STATE Let $S^*$ be a feasible solution (FVS-4CL is guessable)
+    \STATE Perform BFS from an arbitrary vertex $r$
+    \WHILE{there exists a subgraph $J_{\kappa-2m}$ of width $\kappa - 2m$ such that \\ \hspace{1.5em} $w_A((G,w), S^*, J_{\kappa-2m}) < w(S^*)$}
+        \STATE $S^* \leftarrow A((G,w), S^*, J_{\kappa-2m})$
+    \ENDWHILE
+    \STATE Define $w': V(G) \rightarrow \mathbb{R}^+$ by:
+    \[
+    w'(x) = 
+    \begin{cases}
+    w(x) & \text{if } x \in S^* \\
+    (1 + \epsilon)w(x) & \text{otherwise}
+    \end{cases}
+    \]
+    \RETURN $(S^*, w')$
+    \end{algorithmic}
+  \end{algorithm}
 \end{frame}
 
 
